# TextEditor

./: CMakeLists.txt  README.md  TextEditor.cpp  TextEditor.h
Editor/: CMakeLists.txt
Editor/include/: Buffer.h  Config.h  Editor.h  Key.h  Log.h  Painter.h  Row.h  State.h
Editor/src/: Buffer.cpp  Config.cpp  Editor.cpp  Key.cpp  Log.cpp  Painter.cpp  Row.cpp  State.cpp
